Bug 160093 - Navigator empty after inserting formula OLE object
Summary: Navigator empty after inserting formula OLE object
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.5.5.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2024-03-08 06:23 UTC by stragu
Modified: 2024-04-12 19:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample ODG (52.53 KB, application/vnd.oasis.opendocument.graphics)
2024-03-08 06:23 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2024-03-08 06:23:04 UTC
Created attachment 193024 [details]
sample ODG

After inserting a formula object, the contents of the Navigator sidebar deck disappear.

Steps:
1. Open attachment (a file with sample objects)
2. Inserting a formula object (Shift + Alt + E), type some text in formula
3. Click out of formula

Result: Navigator empty. Switching the view from "all shapes" to "named shaped" and back resolves the issue, but switching sidebar decks or closing the sidebar don't.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 98c42f7e961e77d7f1c02d53862e4e78ecd07653
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Same with gen VCL.

Also Windows 11:

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 4; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Bibisected with linux-64-7.5 to first bad build [35d8193c826ce6c6c41f75752257e7d30ea7bca0] which points to b23077e1912c41905b44c15c914cb6db889cd22b which is a cherrypick of:

commit 60e32969a98cad348cf8e55e8f93abc3d6e9c70c
author	Jim Raykowski 	Sun May 21 15:39:11 2023 -0800
committer	Jim Raykowski 	Tue May 30 21:06:26 2023 +0200
tdf#155393 SdNavigator: Enhancement to navigate in Notes view
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152075

Jim, can you please have a look?
Comment 1 Jim Raykowski 2024-03-10 01:04:28 UTC
Hi Stéphane,

Here's a one liner patch:
https://gerrit.libreoffice.org/c/core/+/164607

While investing the cause of this bug I noticed that previous to the 'tdf#155393 SdNavigator: Enhancement to navigate in Notes view' patch, while the Navigator tree is as expected after a 'Formula Object' or 'OLE Object...' insert, Navigator tracking of the selected objects/shapes ceases to work until one of a few different things that cause it to start working are done, such as, inserting something other than a formula or OLE object or closing and reopening the Navigator.
Comment 2 stragu 2024-03-11 11:03:15 UTC
Thanks Jim, the patch works.

(In reply to Jim Raykowski from comment #1)
> While investing the cause of this bug I noticed that previous to the
> 'tdf#155393 SdNavigator: Enhancement to navigate in Notes view' patch, while
> the Navigator tree is as expected after a 'Formula Object' or 'OLE
> Object...' insert, Navigator tracking of the selected objects/shapes ceases
> to work until one of a few different things that cause it to start working
> are done, such as, inserting something other than a formula or OLE object or
> closing and reopening the Navigator.
I can reproduce in 7.4 but not anymore with your patch applied.
Comment 3 Jim Raykowski 2024-03-13 20:03:03 UTC
Patchset 2 fixes this reported bug and also fixes empty Navigator occurrences when multiple documents are opened at once:
https://gerrit.libreoffice.org/c/core/+/164607/2
Comment 4 Commit Notification 2024-03-13 23:23:29 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d88ea62d4b6663cf8839e5484e2ae8042112f81

tdf#160093 Fix SdNavigator empty after inserting formula OLE object

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2024-03-14 04:42:43 UTC
Thanks Jim! Verified the fix in a local build.

OK to mark as fixed and cherrypick to 24.2 and 7.6 if straight-forward?
Comment 6 Jim Raykowski 2024-04-12 19:11:05 UTC
(In reply to Stéphane Guillou (stragu) from comment #5)
> OK to mark as fixed and cherrypick to 24.2 and 7.6 if straight-forward?
Sorry for not marking this as fixed sooner. I think it would be OK to cherrypick to 24.2 and 7.6.