tdf#160093 Fix SdNavigator empty after inserting formula OLE object

or OLE Object...

Also fixes empty tree occurance when multiple Draw/Impress documents
are opened at once.

Change-Id: I03d714bf96700d3a7df661fca91cceda703149f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164607
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>